--- a/charts/nsi-envoy/templates/service.yaml
+++ b/charts/nsi-envoy/templates/service.yaml
@@ -10,8 +10,10 @@ metadata:
   {{- end }}
 spec:
   type: {{ .Values.service.type }}
+{{- if eq .Values.service.type "LoadBalancer" }}
   externalTrafficPolicy: Local
   loadBalancerIP: {{ .Values.service.ipAddress }}
+{{- end }}
   ports:
     - port: 443
       targetPort: {{ .Values.ports.containerPort }}
