--- a/charts/nsi-envoy/values.yaml
+++ b/charts/nsi-envoy/values.yaml
@@ -50,7 +50,7 @@ service:
     service.beta.kubernetes.io/azure-load-balancer-internal: "true"
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
