--- a/charts/nsi-safnari/templates/statefulset.yaml
+++ b/charts/nsi-safnari/templates/statefulset.yaml
@@ -29,6 +29,17 @@ spec:
       serviceAccountName: {{ include "nsi-safnari.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      initContainers:
+      - name: wait-for-postgres
+        image: postgres:alpine
+        command: ["sh", "-c",
+          "until pg_isready -h nsi-node-postgresql.nsi.svc.cluster.local -p 5432;
+          do echo `date` sleeping 2 seconds ...; sleep 2; done"]
+      - name: wait-for-pce
+        image: curlimages/curl:latest
+        command: ["sh", "-c",
+          "until [ $(curl -sw '%{http_code}' http://nsi-node-nsi-pce.nsi.svc.cluster.local/paths -o /dev/null) -eq 200 ];
+          do echo `date` sleeping 2 seconds ...; sleep 2; done"]
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
