moved all examples to examples folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 .*.swp
 values.yaml
 Chart.lock
+config/
 charts/
-config/*/certificates/key
-config/*/certificates/trust
-config/*/templates
-charts/*/config
