--- a/examples/values.yaml.example
+++ b/examples/values.yaml.example
@@ -5,44 +5,58 @@
 ##############################################################################
 nsi-dds:
   enabled: true
-  replicaCount: 1
   
   image:
     registry: docker.io
     repository: hnstrmprt/nsi-dds
     pullPolicy: IfNotPresent
     # tag overrides the image tag whose default is the chart appVersion
-    tag: "1.0.27"
+    #tag: "1.0.27"
     home: "/nsi-dds"
-  
-  ports:
-    name: "nsi-dds-api"
-    containerPort: 8401
-    protocol: "TCP"
-  
-  probe:
-    scheme: "HTTPS"
-    path: "/dds/portal"
-    initialDelaySeconds: 0
-    startupProbe:
-      failureThreshold: 100
-      periodSeconds: 3
-  
-  service:
-    type: ClusterIP
-    port: 80
-    internalHttpsPort: 8401
-  
-  config:
-    name: "nsi-dds-config"
-    mountPath: "/config"
-    configFilesGlob: "config/*"
-  
-  cache:
-    name: "nsi-dds-cache"
-    mountPath: "/cache"
-    storage: "1Gi"
 
+  startupProbe:
+    enabled: false
+    failureThreshold: 30
+    periodSeconds: 10
+    timeoutSeconds: 5
+
+  livenessProbe:
+    enabled: false
+    failureThreshold: 5
+    periodSeconds: 6
+    timeoutSeconds: 5
+  
+  serviceAccount:
+    create: false
+    annotations: {}
+    # The name of the service account to use.
+    # If not set and create is true, a name is generated using the fullname template
+    name: ""
+
+  service:
+    name: nsi-dds
+    port: 80
+    containerPort: 8401
+    type: ClusterIP
+  #  type: LoadBalancer
+  #  ipAddress: 145.101.126.224
+  #  annotations:
+  #    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+
+  ingress:
+    enabled: false
+    annotations:
+      kubernetes.io/ingress.class: nginx
+      kubernetes.io/tls-acme: "true"
+    hosts:
+      - host: front.example.domain
+        paths:
+          - path: "/nsi-dds/(.*)"
+    tls:
+      - secretName: tls-secret-api
+        hosts:
+          - front.example.domain
+  
   resources:
     requests:
       memory: 0.5Gi
@@ -51,15 +65,8 @@ nsi-dds:
       memory: 1.5Gi
       cpu: 1000m
 
-  #affinity:
-  #  nodeAffinity:
-  #    requiredDuringSchedulingIgnoredDuringExecution:
-  #      nodeSelectorTerms:
-  #      - matchExpressions:
-  #        - key: node.kubernetes.io/instance-type
-  #          operator: In
-  #          values:
-  #          - Standard_DS2_v2
+  cache:
+    storage: "1Gi"
 
 ##############################################################################
 #                                                                            #
@@ -69,8 +76,6 @@ nsi-dds:
 nsi-pce:
   enabled: true
 
-  replicaCount: 1
-  
   image:
     registrey: docker.io
     repository: hnstrmprt/nsi-pce
@@ -79,19 +84,52 @@ nsi-pce:
     tag: "2.0.4"
     home: "/nsi-pce"
   
-  ports:
-    name: "nsi-pce-api"
-    containerPort: 8080
-    protocol: "TCP"
+  startupProbe:
+    enabled: false
+    failureThreshold: 30
+    periodSeconds: 10
+    timeoutSeconds: 5
+
+  livenessProbe:
+    enabled: false
+    failureThreshold: 5
+    periodSeconds: 6
+    timeoutSeconds: 5
   
+  serviceAccount:
+    create: false
+    annotations: {}
+    # The name of the service account to use.
+    # If not set and create is true, a name is generated using the fullname template
+    name: ""
+
   service:
-    type: ClusterIP
+    name: nsi-pce
     port: 80
+    containerPort: 8080
+  # configure either ClusterIP or LoadBalancer + ipAddress
+    type: ClusterIP
+  #  type: LoadBalancer
+  #  ipAddress: 1.2.3.4
+  #  annotations:
+  #    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
   
-  config:
-    name: "nsi-pce-config"
-    mountPath: "/nsi-pce/config"
-    configFilesGlob: "config/*"
+  ingress:
+    enabled: false
+    annotations:
+      kubernetes.io/ingress.class: nginx
+      kubernetes.io/tls-acme: "true"
+    hosts:
+      - host: chart-example.local
+        paths:
+        - path: /
+          backend:
+            serviceName: chart-example.local
+            servicePort: 80
+    tls:
+      - secretName: chart-example-tls
+        hosts:
+          - chart-example.local
 
   resources:
     requests:
@@ -101,15 +139,10 @@ nsi-pce:
       memory: 10Gi
       cpu: 1000m
 
-  #affinity:
-  #  nodeAffinity:
-  #    requiredDuringSchedulingIgnoredDuringExecution:
-  #      nodeSelectorTerms:
-  #      - matchExpressions:
-  #        - key: node.kubernetes.io/instance-type
-  #          operator: In
-  #          values:
-  #          - Standard_DS2_v2
+  config:
+    name: "nsi-pce-config"
+    mountPath: "/nsi-pce/config"
+    configFilesGlob: "config/*"
 
 ##############################################################################
 #                                                                            #
@@ -119,8 +152,6 @@ nsi-pce:
 nsi-safnari:
   enabled: true
   
-  replicaCount: 1
-  
   image:
     registry: docker.io
     repository: hnstrmprt/nsi-safnari
@@ -128,16 +159,61 @@ nsi-safnari:
     # tag overrides the image tag whose default is the chart appVersion
     tag: "2.1.3.3"
   
-  ports:
-    name: "nsi-safnari-api"
-    containerPort: 8080
-    probePort: 8080
-    protocol: "TCP"
-  
+  startupProbe:
+    enabled: true
+    failureThreshold: 30
+    periodSeconds: 10
+    timeoutSeconds: 5
+
+  livenessProbe:
+    enabled: true
+    failureThreshold: 5
+    periodSeconds: 6
+    timeoutSeconds: 5
+
+  serviceAccount:
+    create: false
+    annotations: {}
+    # The name of the service account to use.
+    # If not set and create is true, a name is generated using the fullname template
+    name: ""
+
   service:
-    type: ClusterIP
+    name: "nsi-safnari"
     port: 80
+    containerPort: 8080
+  # configure either ClusterIP or LoadBalancer + ipAddress
+    type: ClusterIP
+  #  type: LoadBalancer
+  #  ipAddress: 1.2.3.4
+  #  annotations:
+  #    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
   
+  ingress:
+    enabled: false
+    annotations:
+      kubernetes.io/ingress.class: nginx
+      kubernetes.io/tls-acme: "true"
+    hosts:
+      - host: chart-example.local
+        paths:
+        - path: /
+          backend:
+            serviceName: chart-example.local
+            servicePort: 80
+  tls:
+    - secretName: chart-example-tls
+      hosts:
+        - chart-example.local
+
+  resources:
+    requests:
+      memory: 0.4Gi
+      cpu: 100m
+    limits:
+      memory: 0.6Gi
+      cpu: 1000m
+
   config:
     name: "nsi-safnari-config"
     mountPath: "/config"
@@ -161,24 +237,6 @@ nsi-safnari:
     volumePermissions:
       enabled: true
 
-  resources:
-    requests:
-      memory: 0.4Gi
-      cpu: 100m
-    limits:
-      memory: 0.6Gi
-      cpu: 1000m
-
-  #affinity:
-  #  nodeAffinity:
-  #    requiredDuringSchedulingIgnoredDuringExecution:
-  #      nodeSelectorTerms:
-  #      - matchExpressions:
-  #        - key: node.kubernetes.io/instance-type
-  #          operator: In
-  #          values:
-  #          - Standard_DS2_v2
-
 ##############################################################################
 #                                                                            #
 # Network Service Interface envoy front-end proxy                            #
@@ -194,17 +252,26 @@ nsi-envoy:
     pullPolicy: IfNotPresent
     # tag overrides the image tag whose default is the chart appVersion
     tag: "1.17.4"
+
+  livenessProbe:
+    enabled: true
+    port: 8081
+
+  readinessProbe:
+    enabled: true
+    port: 8081
   
-  ports:
-    name: "nsi-envoy"
-    containerPort: 8080
-    probePort: 8081
-    protocol: "TCP"
-  
+  serviceAccount:
+    create: false
+    annotations: {}
+    # The name of the service account to use.
+    # If not set and create is true, a name is generated using the fullname template
+    name: ""
+
   service:
-    type: ClusterIP
-    #type: LoadBalancer
-    #ipAddress: ""
+    #type: ClusterIP
+    type: LoadBalancer
+    ipAddress: "145.101.126.222"
     port: 443
     annotations:
       service.beta.kubernetes.io/azure-load-balancer-internal: "true"
@@ -234,11 +301,6 @@ nsi-envoy:
           - safnari.example.domain
         #secretName: nsi-tls
   
-  config:
-    name: "nsi-envoy-config"
-    mountPath: "/opt/bitnami/envoy/conf"
-    configFilesGlob: "config/*"
-
   resources:
     requests:
       memory: 100Mi
@@ -247,12 +309,7 @@ nsi-envoy:
       memory: 200Mi
       cpu: 1000m
 
-  #affinity:
-  #  nodeAffinity:
-  #    requiredDuringSchedulingIgnoredDuringExecution:
-  #      nodeSelectorTerms:
-  #      - matchExpressions:
-  #        - key: node.kubernetes.io/instance-type
-  #          operator: In
-  #          values:
-  #          - Standard_DS2_v2
+  config:
+    name: "nsi-envoy-config"
+    mountPath: "/opt/bitnami/envoy/conf"
+    configFilesGlob: "config/*"
