--- a/Chart.yaml
+++ b/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: nsi-node
 description: Deploy a Network Service Interface node
 type: application
-version: 0.0.3
+version: 0.0.4
 
 dependencies:
   - name: nsi-dds
@@ -10,7 +10,7 @@ dependencies:
     repository: "@nsi-node"
     condition: nsi-dds.enabled
   - name: nsi-pce
-    version: ">= 1.0.0"
+    version: "1.0.5"
     repository: "@nsi-node"
     condition: nsi-pce.enabled
   - name: nsi-safnari
