pinned chart nsi-dds to 1.0.4 and nsi-node to 1.0.2

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -2,11 +2,11 @@ apiVersion: v2
 name: nsi-node
 description: Deploy a Network Service Interface node
 type: application
-version: 0.0.12
+version: 0.0.13
 
 dependencies:
   - name: nsi-dds
-    version: ">= 1.0.0"
+    version: "1.0.4"
     repository: "@nsi-node"
     condition: nsi-dds.enabled
   - name: nsi-pce
@@ -18,6 +18,6 @@ dependencies:
     repository: "@nsi-node"
     condition: nsi-safnari.enabled
   - name: nsi-envoy
-    version: ">= 1.0.0"
+    version: "1.0.2"
     repository: "@nsi-node"
     condition: nsi-envoy.enabled
