--- a/examples/nsi-dds/envoy-filter_chain_match.yaml
+++ b/examples/nsi-dds/envoy-filter_chain_match.yaml
@@ -8,6 +8,7 @@
           codec_type: AUTO
           http_protocol_options:
             accept_http_10: true
+            default_host_for_http_10: "dds.example.domain"
           route_config:
             name: local_route
             virtual_hosts:
@@ -24,7 +25,7 @@
               not_health_check_filter:  {}
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
-              path: "/dev/stdout"
+              path: "/dev/stderr"
               log_format:
                 text_format: '[%START_TIME%] %DOWNSTREAM_DIRECT_REMOTE_ADDRESS% "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"\n'
       transport_socket:
