--- a/examples/nsi-envoy/envoy-head.yaml
+++ b/examples/nsi-envoy/envoy-head.yaml
@@ -1,5 +1,5 @@
 admin:
-  access_log_path: /dev/stdout
+  access_log_path: /dev/stderr
   address:
     socket_address: { address: 0.0.0.0, port_value: 8081 }
 static_resources:
