moved postgresql from opennsa and safnari to node

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: nsi-node
 description: Deploy a Network Service Interface node
 type: application
-version: 0.0.17
+version: 0.0.18
 
 dependencies:
   - name: nsi-dds
@@ -14,7 +14,7 @@ dependencies:
     repository: "@nsi-node"
     condition: nsi-pce.enabled
   - name: nsi-safnari
-    version: "1.0.7"
+    version: "1.0.8"
     repository: "@nsi-node"
     condition: nsi-safnari.enabled
   - name: nsi-envoy
@@ -22,6 +22,10 @@ dependencies:
     repository: "@nsi-node"
     condition: nsi-envoy.enabled
   - name: nsi-opennsa
-    version: "0.0.3"
+    version: "0.0.4"
     repository: "@nsi-node"
     condition: nsi-opennsa.enabled
+  - name: postgresql
+    version: ">=9.6 <10"
+    repository: "@bitnami"
+    condition: postgresql.enabled
