--- a/examples/values.yaml.example
+++ b/examples/values.yaml.example
@@ -8,10 +8,10 @@ nsi-dds:
   
   image:
     registry: docker.io
-    repository: hnstrmprt/nsi-dds
+    repository: ghcr.io/bandwidthondemand/nsi-dds
     pullPolicy: IfNotPresent
     # tag overrides the image tag whose default is the chart appVersion
-    #tag: "1.0.27"
+    tag: "1.0.28"
     home: "/nsi-dds"
 
   startupProbe:
@@ -77,11 +77,10 @@ nsi-pce:
   enabled: true
 
   image:
-    registrey: docker.io
-    repository: hnstrmprt/nsi-pce
+    repository: ghcr.io/bandwidthondemand/nsi-pce
     pullPolicy: IfNotPresent
     # tag overrides the image tag whose default is the chart appVersion
-    tag: "2.0.4"
+    tag: "2.0.5"
     home: "/nsi-pce"
   
   startupProbe:
@@ -214,28 +213,13 @@ nsi-safnari:
       memory: 0.6Gi
       cpu: 1000m
 
+  postgresql:
+    enabled: false
+
   config:
     name: "nsi-safnari-config"
     mountPath: "/config"
     configFilesGlob: "config/*"
-  
-  postgresql:
-    postgresqlUsername: nsi-safnari-user
-    postgresqlPassword: password
-    postgresqlDatabase: nsi-safnari
-    image:
-      tag: 9.6.21
-    persistence:
-      size: 1Gi
-    resources:
-      requests:
-        memory: 0.25Gi
-        cpu: 100m
-      limits:
-        memory: 0.50Gi
-        cpu: 1000m
-    volumePermissions:
-      enabled: true
 
 ##############################################################################
 #                                                                            #
@@ -248,6 +232,8 @@ nsi-envoy:
   replicaCount: 1
   
   image:
+    registry: docker.io
+    repository: bandwidthondemand/nsi-pce
     repository: hnstrmprt/nsi-envoy
     pullPolicy: IfNotPresent
     # tag overrides the image tag whose default is the chart appVersion
@@ -313,3 +299,34 @@ nsi-envoy:
     name: "nsi-envoy-config"
     mountPath: "/opt/bitnami/envoy/conf"
     configFilesGlob: "config/*"
+
+##############################################################################
+#                                                                            #
+# NorduNet's OpenNSA                                                         #
+#                                                                            #
+##############################################################################
+nsi-opennsa:
+  enabled: true
+
+  postgresql:
+    enabled: false
+
+##############################################################################
+#                                                                            #
+# PostgreSQL                                                                 #
+#                                                                            #
+##############################################################################
+postgresql:
+  enabled: true
+  postgresqlUsername: nsi-node-user
+  postgresqlPassword:
+  postgresqlDatabase:
+  image:
+    tag: 9.6.21
+  persistence:
+    size: 1Gi
+  resources:
+    requests:
+      memory: 500Mi
+  volumePermissions:
+    enabled: true
