--- a/examples/values.yaml.example
+++ b/examples/values.yaml.example
@@ -7,7 +7,6 @@ nsi-dds:
   enabled: true
   
   image:
-    registry: docker.io
     repository: ghcr.io/bandwidthondemand/nsi-dds
     pullPolicy: IfNotPresent
     # tag overrides the image tag whose default is the chart appVersion
@@ -152,8 +151,7 @@ nsi-safnari:
   enabled: true
   
   image:
-    registry: docker.io
-    repository: hnstrmprt/nsi-safnari
+    repository: ghcr.io/bandwidthondemand/nsi-safnari
     pullPolicy: IfNotPresent
     # tag overrides the image tag whose default is the chart appVersion
     tag: "2.1.3.3"
@@ -200,10 +198,10 @@ nsi-safnari:
           backend:
             serviceName: chart-example.local
             servicePort: 80
-  tls:
-    - secretName: chart-example-tls
-      hosts:
-        - chart-example.local
+    tls:
+      - secretName: chart-example-tls
+        hosts:
+          - chart-example.local
 
   resources:
     requests:
@@ -232,9 +230,7 @@ nsi-envoy:
   replicaCount: 1
   
   image:
-    registry: docker.io
-    repository: bandwidthondemand/nsi-pce
-    repository: hnstrmprt/nsi-envoy
+    repository: ghcr.io/bandwidthondemand/nsi-envoy
     pullPolicy: IfNotPresent
     # tag overrides the image tag whose default is the chart appVersion
     tag: "1.17.4"
@@ -308,8 +304,85 @@ nsi-envoy:
 nsi-opennsa:
   enabled: true
 
+  image:
+    repository: ghcr.io/bandwidthondemand/nsi-opennsa
+    pullPolicy: IfNotPresent
+    # tag 0verrides the image tag whose default is the chart appVersion.
+    tag: ""
+
+  startupProbe:
+    enabled: false
+    failureThreshold: 30
+    periodSeconds: 10
+    timeoutSeconds: 5
+
+  livenessProbe:
+    enabled: false
+    failureThreshold: 5
+    periodSeconds: 6
+    timeoutSeconds: 5
+
+  serviceAccount:
+    create: false
+    annotations: {}
+    # The name of the service account to use.
+    # If not set and create is true, a name is generated using the fullname template
+    name: ""
+
+  service:
+    name: "nsi-opennsa"
+    port: 80
+    containerPort: 9080
+  # configure either ClusterIP or LoadBalancer + ipAddress
+    type: ClusterIP
+  #  type: LoadBalancer
+  #  ipAddress: 1.2.3.4
+  #  annotations:
+  #    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+
+  ingress:
+    enabled: false
+    annotations:
+      kubernetes.io/ingress.class: nginx
+      kubernetes.io/tls-acme: "true"
+    hosts:
+      - host: chart-example.local
+        paths:
+        - path: /
+          backend:
+            serviceName: chart-example.local
+            servicePort: 80
+    tls: []
+      - secretName: chart-example-tls
+        hosts:
+          - chart-example.local
+
+  resources:
+    limits:
+      cpu: 1000m
+      memory: 100Mi
+    requests:
+      cpu: 10m
+      memory: 50Mi
+
   postgresql:
     enabled: false
+
+  config:
+    name: "config"
+    mountPath: "/config"
+    filesGlob: "config/*"
+
+  certificates:
+    name: "certificates"
+    mountPath: "/certificates"
+    filesGlob: "certificates/*"
+
+  backends:
+    enabled: true
+    name: "backends"
+    mountPath: "/backends"
+    filesGlob: "backends/*"
 
 ##############################################################################
 #                                                                            #
