--- a/examples/nsi-opennsa/opennsa.conf
+++ b/examples/nsi-opennsa/opennsa.conf
@@ -13,7 +13,7 @@ port=9080
 dbhost=test-nsi-node-postgresql.nsi.svc.cluster.local
 database=opennsa
 dbuser=nsi-node-user
-dbpassword=%POSTGRES_PASSWORD%
+dbpassword=${POSTGRES_PASSWORD}
 
 tls=false
 key=/config/example.privkey
