--- a/examples/nsi-opennsa/opennsa.conf
+++ b/examples/nsi-opennsa/opennsa.conf
@@ -7,7 +7,8 @@ domain=example.net
 logfile=
 #peers=example.org@http://example.org:9080/NSI/topology/example.org.xml
 host=opennsa.example.net
-port=9080
+port=8080
+base_url=https://opennsa.example.net
 
 # You will need to set these
 dbhost=test-nsi-node-postgresql.nsi.svc.cluster.local
@@ -16,8 +17,8 @@ dbuser=nsi-node-user
 dbpassword=${POSTGRES_PASSWORD}
 
 tls=false
-key=/config/example.privkey
-certificate=/config/example.cert
+key=/config/example.key
+certificate=/config/example.crt
 certdir=/certificates
 
 [dud:topology]
