--- a/examples/nsi-safnari/config-overrides.conf
+++ b/examples/nsi-safnari/config-overrides.conf
@@ -1,7 +1,8 @@
 include "application.conf"
 
 db.default.url = "jdbc:postgresql://nsi-node-postgresql.nsi.svc.cluster.local/nsi-safnari"
-db.default.password = "password"
+db.default.password = ${POSTGRES_PASSWORD}
+db.default.user = "nsi-node-user"
 
 application.secret = ${SAFNARI_APPLICATION_SECRET}
 
