shortened nsi-dds config configmap name in example valuse

--- a/examples/values.yaml.example
+++ b/examples/values.yaml.example
@@ -71,6 +71,9 @@ nsi-dds:
   cache:
     storage: "1Gi"
 
+  config:
+    name: "config"
+
 ##############################################################################
 #                                                                            #
 # Network Service Interface Patch Computation Element                        #
