--- a/examples/nsi-opennsa/opennsa.conf
+++ b/examples/nsi-opennsa/opennsa.conf
@@ -17,8 +17,8 @@ dbuser=nsi-node-user
 dbpassword=${POSTGRES_PASSWORD}
 
 tls=false
-key=/config/example.key
-certificate=/config/example.crt
+key=/config/server.key
+certificate=/config/server.crt
 certdir=/certificates
 
 [dud:topology]
