--- a/examples/nsi-envoy/envoy-head.yaml
+++ b/examples/nsi-envoy/envoy-head.yaml
@@ -1,5 +1,13 @@
 admin:
-  access_log_path: /dev/stderr
+  access_log:
+  - name: envoy.access_loggers.stderr
+    filter:
+      not_health_check_filter:  {}
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog
+      log_format:
+        text_format_source:
+          inline_string: "[%START_TIME%] %DOWNSTREAM_DIRECT_REMOTE_ADDRESS% %REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL% %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% %REQ(X-FORWARDED-FOR)% %REQ(USER-AGENT)% %REQ(X-REQUEST-ID)% %REQ(:AUTHORITY)% %UPSTREAM_HOST% %DOWNSTREAM_REMOTE_ADDRESS%\n"
   address:
     socket_address: { address: 0.0.0.0, port_value: 8081 }
 static_resources:
