--- a/examples/nsi-opennsa/envoy-filter_chain_match.yaml
+++ b/examples/nsi-opennsa/envoy-filter_chain_match.yaml
@@ -20,14 +20,14 @@
           http_filters:
           - name: envoy.filters.http.router
           access_log:
-          - name: envoy.access_loggers.file
+          - name: envoy.access_loggers.stdout
             filter:
               not_health_check_filter:  {}
             typed_config:
-              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
-              path: "/dev/stderr"
+              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
               log_format:
-                text_format: '[%START_TIME%] %DOWNSTREAM_DIRECT_REMOTE_ADDRESS% "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"\n'
+                text_format_source:
+                  inline_string: "[%START_TIME%] %DOWNSTREAM_DIRECT_REMOTE_ADDRESS% %REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL% %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% %REQ(X-FORWARDED-FOR)% %REQ(USER-AGENT)% %REQ(X-REQUEST-ID)% %REQ(:AUTHORITY)% %UPSTREAM_HOST% %DOWNSTREAM_REMOTE_ADDRESS%\n"
       transport_socket:
         name: envoy.transport_sockets.tls
         typed_config:
