bitnami postgresql chart upgrade to <11 (9.* is discontinued)

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -38,6 +38,6 @@ dependencies:
     repository: "@nsi-node"
     condition: polynsi.enabled
   - name: postgresql
-    version: ">=9.6 <10"
+    version: "<11"
     repository: "@bitnami"
     condition: postgresql.enabled
