--- a/Chart.yaml
+++ b/Chart.yaml
@@ -2,19 +2,19 @@ apiVersion: v2
 name: nsi-node
 description: Deploy a Network Service Interface node
 type: application
-version: 0.1.69
+version: 0.1.70
 
 dependencies:
   - name: nsi-dds
-    version: "1.1.9"
+    version: "1.1.15"
     repository: "@nsi-node"
     condition: nsi-dds.enabled
   - name: nsi-pce
-    version: "1.1.7"
+    version: "1.1.15"
     repository: "@nsi-node"
     condition: nsi-pce.enabled
   - name: nsi-safnari
-    version: "1.1.17"
+    version: "1.1.28"
     repository: "@nsi-node"
     condition: nsi-safnari.enabled
   - name: nsi-envoy
@@ -34,9 +34,13 @@ dependencies:
     repository: "@nsi-node"
     condition: supa.enabled
   - name: polynsi
-    version: "0.1.1"
+    version: "0.1.4"
     repository: "@nsi-node"
     condition: polynsi.enabled
+  - name: nsi-auth
+    version: "0.0.6"
+    repository: "@nsi-node"
+    condition: nsi-auth.enabled
   - name: postgresql
     version: "<12"
     repository: "@bitnami"
